PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Nov 2009, PHP 5.2.12RC2

12 Nov 2009, PHP 5.2.12RC1
- Updated timezone database to version 2009.18 (2009r). (Derick)

- Added "max_file_uploads" INI directive, which can be set to limit the
  number of file uploads per-request to 20 by default, to prevent possible
  DOS via temporary file exhaustion. (Ilia)

- Fixed unnecessary invocation of setitimer when timeouts have been disabled.
  (Arvind Srinivasan)
- Fixed crash in com_print_typeinfo when an invalid typelib is given.
  (Pierre)
- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak. (Rasmus)
- Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
  when calling using Reflection. (Felipe)
- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
  (Felipe)
- Fixed memory leak in openssl_pkcs12_export_to_file(). (Felipe)

- Fixed bug #50073 (parse_url() incorrect when ? in fragment). (Ilia)
- Fixed bug #50006 (Segfault caused by uksort()). (Felipe)
- Fixed bug #50005 (Throwing through Reflection modified Exception object
  makes segmentation fault). (Felipe)
- Fixed bug #49990 (SNMP3 warning message about security level printed twice).
  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted transaction).
  (ben dot pineau at gmail dot com, Ilia, Matteo)  
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49972 (AppendIterator undefined function crash). (Johannes)
- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia, 
  sjoerd at php dot net)
- Fixed bug #49847 (exec() fails to return data inside 2nd parameter, given 
  output lines >4095 bytes). (Ilia)